--- a/index.html
+++ b/index.html
@@ -29,17 +29,41 @@
       <section>
 
         <article>
-          article 01
+          <h1>PとBR(改行の違い)</h1>
+          <h4>brなし</h4>
+          <P>
+          長陽公園は、房山区長陽町にあります。北京で建設中の11万エーカーの新しい公園の1つです。最大の陸地、地理的な場所、最も完全な緑化樹種、および最も完全なインフラストラクチャを備えた公園です。庭園では、人工の風景と元の生態学的な風景が組み合わさって、カラフルな園芸植物のコミュニティを形成し、都市の森の風景を作り出し、市民がリラックス、レクリエーション、フィットネスするのに理想的な場所を提供します。この庭園は、2013年に北京庭園を受賞しました緑化局は市の「質の高い公園」として評価されました。共植：53550本の木、19920本の灌木、717952年生の花、105743 105芝生、668914㎡地被。
+          </P>
+          <h4>brあり</h4>
+          <P>
+            長陽公園は、房山区長陽町にあります。北京で建設中の11万エーカーの新しい公園の1つです。最大の陸地、地理的な場所、最も完全な緑化樹種、および最も完全なインフラストラクチャを備えた公園です。<br>庭園では、人工の風景と元の生態学的な風景が組み合わさって、カラフルな園芸植物のコミュニティを形成し、都市の森の風景を作り出し、市民がリラックス、レクリエーション、フィットネスするのに理想的な場所を提供します。この庭園は、2013年に北京庭園を受賞しました緑化局は市の「質の高い公園」として評価されました。共植：53550本の木、19920本の灌木、717952年生の花、105743 105芝生、668914㎡地被。
+           </P>
         </article>
 
         <article>
-          article 02
+          <h1>様々なリスト表示</h1>
+          <h4>UL：Unordered List</h4>
+        <ul>
+         <li>項目1</li>
+         <li>項目2</li>
+         <li>項目3</li>
+       </ul>
+        <h4>OL：Ordered List</h4>
+       <ol>
+       <li>項目1</li>
+       <li>項目2</li>
+       <li>項目3</li>
+      </ol>
         </article>
 
       </section>
 
       <aside>
-        aside
+        <h1>関連リンク</h1>
+       <ul>
+        <li><a href="https://www.kyusan-u.ac.jp">九州産業大学</a></li>
+        <li><a href="https://www.example.com">EXAMPLE.COM</a></li>
+     </ul>
       </aside>
 
     </main>
