--- a/index.html
+++ b/index.html
@@ -56,7 +56,59 @@
       </ol>
         </article>
 
+          <article>
+         <h1>Sample Video</h1>
+          <iframe> width="560" height="315" src="https://www.youtube.com/watch?v=vrkbf9CVkn4&list=RDvjj16qog4vQ&index=4"
+        </iframe>
+        </article>
+
+  <article>
+        <h1>Sample Image</h1>
+        <img src="images/autumn/1.jpg" width="480" alt="サンプル">
+        <img src="images/autumn/2.jpg" width="480" alt="サンプル">
+        <img src="images/autumn/8.jpg" width="480" alt="サンプル">
+        <img src="images/autumn/10.jpg" width="480" alt="サンプル">
+        <img src="images/autumn/11.jpg" width="480" alt="サンプル">
+        </article>
+
+<article>
+        <h1>表組み</h1>
+         <table  border="1" rules="all">
+             <thead>
+                  <tr>
+                       <th>商品</th>
+                       <th>価格</th>
+                  </tr>
+             </thead>
+             <tfoot>
+                  <tr>
+                       <td>合計金額</td>
+                       <td>250円</td>
+                  </tr>
+             </tfoot>
+             <tbody>
+                  <tr>
+                       <td>鉛筆</td>
+                       <td>150円</td>
+                  </tr>
+                  <tr>
+                       <td>消しゴム</td>
+                       <td>100円</td>
+                  </tr>
+             </tbody>
+         </table>
+</article>
+
+<article>
+<h1>Sample Form</h1>
+<form action="http://www.google.com/search" method="get">
+  <label >Google: </label>
+  <input type="search" name="q">
+</form>
+</article>
+
       </section>
+
 
       <aside>
         <h1>関連リンク</h1>
