--- a/index.html
+++ b/index.html
@@ -64,11 +64,11 @@
 
   <article>
         <h1>Sample Image</h1>
-        <img src="images/autumn/1.jpg" width="480" alt="サンプル">
-        <img src="images/autumn/2.jpg" width="480" alt="サンプル">
-        <img src="images/autumn/8.jpg" width="480" alt="サンプル">
-        <img src="images/autumn/10.jpg" width="480" alt="サンプル">
-        <img src="images/autumn/11.jpg" width="480" alt="サンプル">
+        <img src="images/autumn/1.jpg" width="480" alt="autumn">
+        <img src="images/autumn/2.jpg" width="480" alt="autumn">
+        <img src="images/autumn/8.jpg" width="480" alt="autumn">
+        <img src="images/autumn/10.jpg" width="480" alt="autumn">
+        <img src="images/autumn/11.jpg" width="480" alt="autumn">
         </article>
 
 <article>
