--- a/index.html
+++ b/index.html
@@ -58,8 +58,9 @@
 
           <article>
          <h1>Sample Video</h1>
-          <iframe> width="560" height="315" src="https://www.youtube.com/watch?v=vrkbf9CVkn4&list=RDvjj16qog4vQ&index=4"
-        </iframe>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/vrkbf9CVkn4"
+        frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
+      </iframe>
         </article>
 
   <article>
