--- a/index.html
+++ b/index.html
@@ -58,6 +58,7 @@
 
           <article>
          <h1>Sample Video</h1>
+         <div class="youtube">
         <iframe width="560" height="315" src="https://www.youtube.com/embed/vrkbf9CVkn4"
         frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
       </iframe>
